# SuperOS

./: Cargo.toml  README.md  requirements.txt
docs/: architecture.md  boot.md  filesystem.md  ipc.md  kernel.md  logging.md  memory.md  ml.md  process_model.md  scheduler.md  security.md  threading.md
kernel/: lib.rs
kernel/core/: kernel.rs  mod.rs  syscall.rs
kernel/ipc/: message.rs  mod.rs  pipe.rs  shared_mem.rs
kernel/memory/: mod.rs  paging.rs  vmm.rs
kernel/process/: mod.rs  process.rs  state.rs
kernel/scheduler/: interface.rs  mod.rs
kernel/security/: capability.rs  mod.rs
kernel/thread/: mod.rs  thread.rs
orchestrator/: capability_enforcer.py  ipc_bus.py  ipc_client.py  logger.py  main.py  process_control.py  process_manager.py  scheduler.py
projects/: hello_world.py
services/database/: README.md  Schema.sql
services/ml/: action_planner.py  context_provider.py  ml_service.py  model_registry.py  policy.py
services/ml/adapters/: base.py  ollama.py
services/ml/runtimes/: base.py  local.py
services/runtimes/arduino/: policy.py  runtime.py  service.py  sketch_loader.py
services/runtimes/cpp/: cpp_service.py
services/runtimes/csharp/: csharp_service.py
services/web/: web_service.py
ui/: app.py  error_sidebar.py  event_loop.py  gui.py  ipc_bridge.py  ml_panel.py  project_explorer.py  terminal.py  web_viewer.py  window_manager.py
ui/layout/: chrome.py  split.py  surface.py
ui/theme/: animations.py  colors.py  spacing.py  typography.py
ui/widgets/: desktop.py  panel.py  statusbar.py  terminal.py  toolbar.py
(+18 files in other folders)
