[package]
name = "superos-kernel"
version = "0.1.0"
edition = "2021"
authors = ["SuperOS Contributors"]
license = "MIT"
description = "SuperOS microkernel: process, IPC, memory, and capability enforcement"
repository = "https://github.com/Earl-cmyk/superos"
readme = "../README.md"

[lib]
name = "superos_kernel"
path = "kernel/lib.rs"
crate-type = ["rlib"]

[profile.dev]
panic = "abort"
opt-level = 0
debug = true

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
# Core
spin = "0.9"
lazy_static = "1.4"
bitflags = "2.4"
thiserror = "1.0"
log = "0.4"

# Memory & low-level
x86_64 = { version = "0.15", optional = true }
page-table = { version = "0.3", optional = true }

# Concurrency
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"

# IPC / serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Capability & security
uuid = { version = "1.6", features = ["v4"] }

# Time & scheduling
time = { version = "0.3", features = ["macros"] }

[features]
default = ["hosted"]
hosted = []
baremetal = ["x86_64", "page-table"]

[dev-dependencies]
env_logger = "0.11"
rand = "0.8"

[workspace]
members = [
    "kernel"
]

[package.metadata.superos]
kernel = true
microkernel = true
authority = "capability-based"
policy_layer = "python"
